Add Joystick and dynamic layout

--- a/led/app/mainwindow.ui
+++ b/led/app/mainwindow.ui
@@ -14,31 +14,16 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="red_pushButton">
+   <widget class="QWidget" name="verticalLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>60</y>
-      <width>80</width>
-      <height>24</height>
+      <x>50</x>
+      <y>0</y>
+      <width>211</width>
+      <height>191</height>
      </rect>
     </property>
-    <property name="text">
-     <string>RED</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="green_pushButton">
-    <property name="geometry">
-     <rect>
-      <x>110</x>
-      <y>100</y>
-      <width>80</width>
-      <height>24</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>GREEN</string>
-    </property>
+    <layout class="QVBoxLayout" name="widgets_frame"/>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
